--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="rectangle"></div>
         <div class="rectangle-2"></div>
-        <button class="div-wrapper" onclick="window.location.href = 'primordiad.dll';">Get √</button>
+        <button class="div-wrapper" onclick="window.location.href = 'primordiada.dll';">Get √</button>
         <div class="overlap-group-2">
           <div class="rectangle-3"></div>
           <div class="rectangle-4"></div>
